@@ -184,8 +184,30 @@ class Smarty_ModuleInterface extends Smarty {
 				}
 			}
 
-			#Do html_blobs
-			$tpl_source = preg_replace_callback("|\{html_blob name=[\'\"]?(.*?)[\'\"]?\}|", "html_blob_regex_callback", $tpl_source);
+			#Do html_blobs (they're recursive now... but only 15 deep...  deal!)
+			$safetycount = 0;
+			$regexstr = "|\{html_blob name=[\'\"]?(.*?)[\'\"]?\}|";
+			while (1 == 1)
+			{
+				$result = preg_replace_callback($regexstr, "html_blob_regex_callback", $tpl_source);
+				if ($result != '' && $result != $tpl_source)
+				{
+					$tpl_source = $result;
+				}
+				else
+				{
+					break;
+				}
+
+				$safetycount++;
+
+				if ($safetycount > 15)
+				{
+					# Remove the last one so it doesn't get sent to smarty
+					$tpl_source = preg_replace($regexstr, '', $tpl_source);
+					break;
+				}
+			}
 
 			#Perform the content prerender callback
 			foreach($gCms->modules as $key=>$value)
